# GozAI

./: .env.example  .flutter-plugins  .gitignore  .vercelignore  README.md  analyze.txt  analyze_output.txt  build_error.txt  build_log.txt  build_web.sh  commit_msg.txt  deploy.sh  firebase.json  firestore.rules  git_crash_course.md  git_log.txt  hackathon_article.md  pubspec.yaml  push_out.txt  resolve_conflicts.py  vercel.json
.firebase/: hosting.YnVpbGRcd2Vi.cache
.vercel/: project.json
android/: gradle.properties
android/app/: build.gradle.kts
backend/: Dockerfile  Makefile  cloudbuild.yaml  pyproject.toml  seed_db.sh  seed_rag_firestore.py  serve_web.py
backend/gozai_agent/: agent.py  rag_service.py  rag_service_test.py  tools.py
backend/tests/eval/: eval_config.json
backend/tests/eval/evalsets/: gozai_core.json
docs/: NATIVE_ARCHITECTURE_BLUEPRINT.md  demo_script.md
ios/Runner/: GoogleService-Info.plist  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
lib/core/: app_config.dart  system_prompt.dart  theme.dart
lib/screens/: caregiver_dashboard.dart  doctor_dashboard.dart  home_screen.dart  login_screen.dart  transcripts_screen.dart
lib/services/: adk_bridge_service.dart  audio_service.dart  audio_service_imports.dart  audio_service_stub.dart  audio_service_stubs.dart  audio_service_web.dart  barcode_service.dart  barcode_service_native.dart  barcode_service_stub.dart  camera_service.dart  gemini_live_service.dart  (+16 more)
test/: user_memory_test.dart  widget_test.dart
web/: audio_processor.js  index.html
(+3 files in other folders)
